[package]
name = "coutils"
version = "0.1.0"
edition = "2021"
author = ["Alyx Shang"]
license-file = "LICENSE"
description= "A set of useful functions for Rust."
homepage = "https://github.com/alyxshang/coutils"
repository = "https://github.com/alyxshang/coutils"
documentation = "https://docs.rs/coutils/0.1.0"
readme = "README.markdown"
keywords = [
  "utilities"
]
categories = [
  "utilities"
]
exclude = [
  "/.github",
  ".gitignore"
]

[dependencies]
rand = "0.8.5"
git2 = { version = "0.18.3", optional = true }
chrono = { version = "0.4.37", optional = true }
fs_extra = { version = "1.3.0", optional = true }

[features]
time = ["chrono"]
filesystem = ["fs_extra"]
clone = ["filesystem", "git2"]