[package]
name = "coutils"
version = "0.2.0"
edition = "2021"
author = ["Alyx Shang"]
license-file = "LICENSE"
description= "A set of useful functions for Rust."
homepage = "https://github.com/alyxshang/coutils"
repository = "https://github.com/alyxshang/coutils"
readme = "README.markdown"
keywords = [
  "utilities"
]
categories = [
  "utilities"
]
exclude = [
  "/.github",
  ".gitignore"
]

[dependencies]
rand = "0.8.5"
tar = { version = "0.4", optional = true }
bytes = { version = "1.8.0", optional = true }
git2 = { version = "0.19.0", optional = true }
flate2 = { version ="1.0.35", optional = true }
reqwest = { version ="0.12.9", optional = true }
chrono = { version = "0.4.38", optional = true }
fs_extra = { version = "1.3.0", optional = true }
tokio = { version = "1", features = ["full"], optional = true }

[features]
time = ["chrono"]
filesystem = ["fs_extra"]
clone = ["filesystem", "git2"]
compression = ["tar", "flate2", "filesystem"]
loading = ["reqwest", "bytes", "filesystem", "tokio"]